# CamExt

./: .gitignore  LICENSE  README.md  build.sh  log.md
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/fujiwaracreative/camext/: MainActivity.kt
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/core/error/: failures.dart
mobile/lib/core/theme/: app_theme.dart
mobile/lib/features/stream/data/datasources/: platform_channel_source.dart  socket_egress_source.dart
mobile/lib/features/stream/data/models/: packet_header.dart
mobile/lib/features/stream/data/repositories/: stream_repository_impl.dart
mobile/lib/features/stream/domain/entities/: connection_status.dart  stream_config.dart  stream_stats.dart
mobile/lib/features/stream/domain/repositories/: i_stream_repository.dart
mobile/lib/features/stream/domain/usecases/: get_connection_status.dart  get_stream_stats.dart  start_stream.dart  stop_stream.dart
mobile/lib/features/stream/presentation/cubit/: stream_notifier.dart
mobile/lib/features/stream/presentation/pages/: dashboard_page.dart
mobile/linux/: CMakeLists.txt
mobile/linux/runner/: my_application.cc
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
mobile/windows/runner/: Runner.rc  main.cpp
obs/: CMakeLists.txt  build.ps1
obs/obs-sdk/include/: obs-module.h  obs.h
obs/obs-sdk/win64/: obs.def
obs/src/: obs-plugin-main.cpp  receiver-main.cpp
obs/src/decoder/: i_decoder.h  wic_jpeg_decoder.cpp  wic_jpeg_decoder.h  wmf_h264_decoder.cpp  wmf_h264_decoder.h
obs/src/network/: packet_demuxer.cpp  packet_demuxer.h  socket_server.cpp  socket_server.h
obs/src/utils/: frame_queue.h
